fix: quiz
